# memoria1

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  conftest.py  psutil.py  pyproject.toml  pytest.ini  pytest_asyncio.py  requirements.txt  requirements_dev.txt  ruff.toml  unified_memory.py
.github/workflows/: ci.yml
aiosqlite/: __init__.py
cryptography/: __init__.py
cryptography/fastapi/: __init__.py
cryptography/fernet/: __init__.py
docs/: architecture.md  index.md
faiss/: __init__.py
fastapi/: __init__.py  routing.py  testclient.py
fastapi/middleware/: cors.py
httpx/: __init__.py
hypothesis/: __init__.py  strategies.py
load_tests/: locustfile.py
memory_system/: __init__.py  cli.py  memory_helpers.py  py.typed  unified_memory.py
memory_system/api/: __init__.py  app.py  dependencies.py  middleware.py  schemas.py
memory_system/api/routes/: __init__.py  admin.py  health.py  memory.py
memory_system/config/: __init__.py  logging.yaml  settings.py
memory_system/core/: __init__.py  embedding.py  enhanced_store.py  index.py  store.py  vector_store.py
memory_system/utils/: __init__.py  cache.py  exceptions.py  metrics.py  security.py
numpy/: __init__.py
numpy/typing/: __init__.py
opentelemetry/instrumentation/: fastapi.py
prometheus_client/: __init__.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
schemathesis/: __init__.py
sentence_transformers/: __init__.py
starlette/: __init__.py  responses.py  types.py
starlette/middleware/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_api.py  test_api_fuzz.py  test_benchmark_regression.py  test_config.py  test_core.py  test_db_invariants.py  test_e2e_snapshot.py  test_edge_cases.py  test_encryption_at_rest.py  test_enhanced_store.py  test_enhanced_store_impl.py  test_fastapi_memory.py  test_health_fault_injection.py  test_hypothesis_vectors.py  test_integration.py  test_metrics_disabled.py  test_performance.py  test_precision_at_k.py  test_semantic_search_benchmark.py  test_sqlite_store_edge_cases.py  test_sqlite_store_extended.py  test_store_ext.py  test_utils.py
tests/tests/: test_fastapi_memory.py
yaml/: __init__.py
